--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -4,6 +4,8 @@ h1, h2, h3 {
   font-weight: normal;
 }
 
+/* Header Bar */
+
 .navbar {
   border-radius: 0;
 }
@@ -17,6 +19,8 @@ h1, h2, h3 {
   margin-right: 8px;
 }
 
+/* Panels */
+
 .panel-body {
   box-shadow: 0 0 15px 0 rgba(0,0,0,.5);
 }
@@ -26,6 +30,27 @@ h1, h2, h3 {
   font-size: 18px;
 }
 
-.page-header > h1 > i, .panel-body > h2 > i {
+.panel-body > h2 > i {
   margin-right: 8px;
+}
+
+/* Stream */
+
+.tweet-stream {
+  margin: 0;
+  padding: 10px;
+  background-color: #1a1a1a;
+  height: 500px;
+  overflow: hidden;
+  border: 1px solid #000;
+  border-radius: 3px;
+  box-shadow:inset 0 0 10px 0 rgba(0,0,0,.9);
+}
+
+.tweet-stream li {
+  list-style: none;
+  border-bottom: 1px dashed #565656;
+  margin: 0 0 5px 0;
+  padding: 0 0 5px 0;
+  font: normal 12px monospace;
 }
