--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -62,3 +62,32 @@ h1, h2, h3 {
   padding: 0 0 5px 0;
   font: normal 12px monospace;
 }
+
+/* List Groups */
+.list-group-item {
+  border: 1px solid #555;
+}
+
+.list-group-item strong {
+  font-weight: bold;
+  color: #fff;
+}
+
+.list-group-item .list-time-stats {
+  margin: 0;
+  padding: 0;
+}
+
+.list-group-item .list-time-stats li {
+  list-style: none;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  margin-right: 8px;
+  text-align: left;
+}
+
+.list-group-item .list-time-stats strong {
+  font-weight: bold;
+  color: #fff;
+}
