--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -24,10 +24,11 @@ h1, h2, h3 {
 /* Panels */
 
 .panel-body {
-  box-shadow: 0 0 15px 0 rgba(0,0,0,.2);
   border: 1px solid #464646;
   border-top: 2px solid #666;
   border-radius: 4px;
+  padding-bottom: 0;
+  box-shadow: 0 0 10px 0 rgba(0,0,0,.9);
 }
 
 .panel-body > h2 {
@@ -52,7 +53,7 @@ h1, h2, h3 {
   overflow: hidden;
   border: 1px solid #000;
   border-radius: 3px;
-  box-shadow:inset 0 0 10px 0 rgba(0,0,0,.9);
+  box-shadow:inset 0 0 10px 0 rgba(0,0,0,.7);
 }
 
 .tweet-stream li {
@@ -64,6 +65,11 @@ h1, h2, h3 {
 }
 
 /* List Groups */
+
+.list-group {
+  box-shadow: 0 0 10px 0 rgba(0,0,0,.4)
+}
+
 .list-group-item {
   border: 1px solid #555;
 }
